# Open-Course-Platform

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile
backend/migrations/2020-01-02-085253_create_ticket_responses/: down.sql  up.sql
backend/migrations/2020-01-04-200645_create_courses/: up.sql
backend/migrations/2020-01-04-201148_create_chapters/: down.sql  up.sql
backend/migrations/2020-01-04-201441_create_sessions/: up.sql
backend/migrations/2020-01-04-202003_create_sessions_text/: down.sql  up.sql
backend/public/: index.html
backend/src/: database.rs  main.rs  models.rs  schema.rs
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: A.tsx  Button.tsx  Card.tsx  Column.tsx  Container.tsx  Footer.tsx  H1.tsx  H2.tsx  H3.tsx  H4.tsx  H5.tsx  H6.tsx  Hr.tsx  InCourseNavigation.tsx  InternalLink.tsx  LargeRoundCard.tsx  LearnMoreButton.tsx  Navigation.tsx  P.tsx  Row.tsx  SessionLink.tsx  Sidebar.tsx  SmallRoundCard.tsx  Span.tsx  TopRightButton.tsx
frontend/functions/: RenderContent.tsx
frontend/pages/: about.tsx  index.tsx  post.tsx  terms.tsx
frontend/pages/p/: [id].tsx
migrations/2020-01-01-165310_create_users/: up.sql
migrations/2020-01-01-183246_create_tickets/: up.sql
migrations/2020-01-02-085253_create_ticket_responses/: down.sql  up.sql
public/: asset-manifest.json  precache-manifest.9b95a4ca74530c63a2f6c5aab33ac137.js  service-worker.js
public/static/css/: main.e4dea006.chunk.css  main.e4dea006.chunk.css.map
src/: database.rs  main.rs  models.rs  schema.rs
(+8 files in other folders)
