[package]
name = "open_course_platform"
version = "0.1.0"
authors = ["axel <TheAxelNilsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-session = "0.3"
actix-files = "0.2"
env_logger = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
dotenv = "0.15"
bcrypt = "0.6"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }